--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
         <div class="panel panel--hero">
           <div class="hero">
             <div class="hero__logoWrap">
-              <img class="hero__logo" src="images/logo-7.webp" alt="Christina Mechelle Creates logo" />
+              <img class="hero__logo" src="images/ep" alt=" Studio L" />
             </div>
 
             <div class="hero__text">
-              <h1 class="hero__title">Christina Mechelle Creates</h1>
+              <h1 class="hero__title">Studio L</h1>
               <p class="hero__sub">
                 Handcrafted design with a clean, modern-lux feel — logos, web design, and artwork built with intention.
               </p>
@@ -119,7 +119,7 @@
                 Tell me what you need — logo, website, or art — and I’ll follow up with next steps.
               </p>
 
-              <div class="contact__meta">
+             <!--  <div class="contact__meta">
                 <div class="metaCard">
                   <div class="metaCard__label">Email</div>
                   <div class="metaCard__value"><a href="mailto:EPG814@gmail.com">EPG814@gmail.com</a></div>
@@ -129,7 +129,7 @@
                   <div class="metaCard__value"><a href="tel:+15093039869">509.303.9869</a></div>
                 </div>
               </div>
-            </div>
+            </div>  -->
 
             <form class="form" id="contactForm">
               <div class="form__row">
