--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@
 
               <button class="btn btn--primary btn--wide" type="submit">Send</button>
 
-              <p class="form__note">
-                This form opens your email client (no backend needed for GitHub Pages).
-              </p>
+             <!-- <p class="form__note">
+             place any note at the bottom of the form
+              </p> -->
             </form>
           </div>
         </div>
