--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Studio L</title>
+  <title>Studio EL</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 
@@ -16,7 +16,7 @@
     <div class="topbar__inner">
       <div class="brand">
         <span class="brand__dot"></span>
-        <span class="brand__name">Studio L</span>
+        <span class="brand__name">Studio EL</span>
       </div>
 
       <nav class="nav" aria-label="Primary">
@@ -39,7 +39,7 @@
         <div class="panel panel--hero">
           <div class="hero">
             <div class="hero__logoWrap">
-              <img class="hero__logo" src="images/ep" alt=" Studio L" />
+              <img class="hero__logo" src="images/SELogo" alt=" Studio EL" />
             </div>
 
             <div class="hero__text">
