--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="panel panel--hero">
           <div class="hero">
             <div class="hero__logoWrap">
-              <img class="hero__logo" src="images/SELogo" alt=" Studio EL" />
+              <img class="hero__logo" src="images/SELogo.webp" alt=" Studio EL" />
             </div>
 
             <div class="hero__text">
